# qg

./: .Rbuildignore  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .qg_settings.toml.example  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_review2307.md  CONTRIBUTING.md  DESCRIPTION  Dockerfile  LICENSE  Makefile  NAMESPACE  README.md  Snakefile  analyze_csvfiles.py  docker-compose-editor.yml  docker-compose-queue.yml  docker-compose-test.yml  find_proteomics_projects.py  instrument.csv  main.py  mkdocs.yml  parse_sld.py  pyproject.toml  zip_sld_files.ps1
.github/workflows/: ci.yml  pages.yml  publish.yml  security.yml
R/: configMetabolomics.R  configMetabolomicsEquiSPLASH.R  configMetabolomicsNew.R  configMetabolomicsPlatesOld.R  configProteomics.R  configProteomicsMclassVialXCaliburLCDevices.R  configProteomicsMclassVialXCaliburSII.R  configProteomicsVialXCaliburSII.R  configs.R  helpers.R  lc-systems.R  shiny.R  validatePattern.R  zzz.R
config_tests/: .gitignore  README.md  noxfile.py  pyproject.toml
config_tests/data/: test_manifest.tsv
config_tests/data/expected/qconfigLipidomicsVanquishVialXCaliburSII_neg/: vial_large.tsv  vial_small.tsv
config_tests/data/expected/qconfigLipidomicsVanquishVialXCaliburSII_pos/: vial_large.tsv  vial_small.tsv
config_tests/data/expected/qconfigLipidomicsVanquishVialXCaliburSII_pos_neg/: vial_large.tsv  vial_small.tsv
config_tests/data/expected/qconfigMetabolomicsVanquishVialXCaliburSII_neg/: vial_large.tsv  vial_small.tsv
config_tests/data/expected/qconfigMetabolomicsVanquishVialXCaliburSII_pos/: vial_large.tsv  vial_small.tsv
config_tests/data/expected/qconfigMetabolomicsVanquishVialXCaliburSII_pos_neg/: vial_large.tsv  vial_small.tsv
config_tests/src/config_tests/: __init__.py  fixtures.py
config_tests/tests/: conftest.py  test_metabolomics_configs.py  test_old.py
docs/: CONFIG.md  Done_restructure_configs.md  HISTORY.md  Makefile  PRIVATE.md  TODO_param_inference.md  TODO_refactor_samplers.md  Todo.md  algorithm_flow.puml  bfabric.md  config_dependencies.puml  config_er.puml  config_models.puml  deployment.md  editor_guide.md  index.md  models.puml  user_modes.md
docs/developers/: deployment.md  history.md  marimo_shared_app_architecture.md  user_modes.md
docs/examples/: README.md  multi_container_samples.csv  plate_different_groups.csv  plate_samples_5x5.csv  plate_samples_80.csv  vial_samples_80.csv
docs/reference/: algorithm.md  config.md
docs/users/: editor_guide.md  local_app.md
inst/extdata/: instrument.csv  metabolomics_sample_config.tsv  test-Metabolomics-Vanquish-VialXCaliburSII-EXPLORIS_4-c37530.RData  test-c37530-MetabolomicsVanquishVialXCaliburSIIEquiSPLASH.RData  test-c37530-MetabolomicsVanquishVialXCaliburSIIEquiSPLASH.csv  test__Proteomics_EVOSEP6x12x8_VialChronos_ASTRAL_1_c28073_.RData
man/: as.Rd  buildQgUI.Rd  dot-EquiSPLASH.Rd  dot-autoQC01.Rd  dot-autoQC01MclassVialXCaliburSII.Rd  dot-autoQC01VialXCaliburSII.Rd  dot-blankEquiSPLASH.Rd  dot-buildQgServer.Rd  dot-buildQgUI.Rd  dot-composePlateSampleTable.Rd  dot-composeSampleTable.Rd  dot-composeVialSampleTable.Rd  dot-createMetabolomicsSample.Rd  dot-insertSample.Rd  dot-interpolateFinalRows.Rd  dot-lcVanquish.Rd  dot-lcWater.Rd  dot-lcWaters.Rd  dot-metabolomicsQueue.Rd  dot-metabolomicsQueueVial.Rd  dot-pooledQCEquiSPLASH.Rd  dot-readPackageFile.Rd  dot-readSampleOfContainer.Rd  dot-replaceRunIds.Rd  dot-toHystar.Rd  dot-validateDateString.Rd  dot-validateFilename.Rd  dot-validatePlateNumber.Rd  dot-validateVanquishPlateNumber.Rd  qconfigMetabolomicsPlateXCalibur.Rd  qconfigMetabolomicsVanquishPlateXCalibur.Rd  qconfigMetabolomicsVanquishPlateXCaliburSII.Rd  qconfigMetabolomicsVanquishVialXCalibur.Rd  qconfigMetabolomicsVanquishVialXCaliburSII.Rd  qconfigMetabolomicsVanquishVialXCaliburSIIEquiSPLASH.Rd  qconfigMetabolomicsVanquishVialXCaliburSIISPLASH.Rd  qconfigMetabolomicsVanquishVialXCaliburSII_pos.Rd  qconfigMetabolomicsVanquishVialXCaliburSplash.Rd  qconfigMetabolomicsVialXCalibur.Rd  qconfigProteomicsEVOSEP6x12x8PlateHystar.Rd  (+7 more)
qg_configs/: CONFIG.md  README.md  Todo.md  algorithm_flow.puml  combinations.csv  config_dependencies.puml  config_editor.py  config_er.puml  instrument.csv  instrument_patterns.csv  instruments.csv  instruments.toml  lc.toml  output_formats.toml  qc_layouts.toml  queue_patterns.toml  sampler.toml  samples.csv  samples.toml  validate_config.py
qg_configs/core/: instruments.csv  output_formats.toml  qc_layouts.toml  qc_layouts_evosep.csv  qc_layouts_grid.csv  queue_patterns.toml  sampler.toml  samples.csv
qg_configs/methods/: ASCEND_1_methods.csv  ASTRAL_1_methods.csv  EXPLORIS_2_methods.csv  LUMOS_2_methods.csv
qg_configs/ui/: combinations.csv  instrument_config.csv  instrument_patterns.csv  tech_area_defaults.toml
qg_configs_new/ui/: instrument_config.csv
scripts/: core_profile_check.py  package_smoke.py
src/: Notes.md
src/qg/: __init__.py  artifacts.py  bfabric_utils.py  (+38 more)
test_data/: .gitignore  Makefile  README.md  Snakefile  marimo_orig_qgen.smk  marimo_queue_analysis.smk
tests/: __init__.py  helpers.py  test_artifacts.py  test_bfabric_auth.py  test_bfabric_utils.py  test_cli.py  test_config_authoring.py  test_config_integration.py  test_config_models_integration.py  test_config_models_new_integration.py  test_editor_core.py  test_example_samples.py  test_generator.py  test_generator_new.py  test_generator_refactor.py  test_gitlab.py  test_hystar_xml_writer.py  test_local_samples.py  test_params_simulator.py  test_position_assigner.py  test_positioning.py  test_positions.py  test_positions_new.py  test_positions_refactor.py  test_queue_app_shared.py  test_queue_builder.py  test_queue_builder_new.py  test_queue_structure.py  test_queue_structure_explicit.py  test_randomize.py  test_randomize_new.py  test_refresh_cache.py  test_resolved_config.py  test_samplers.py  test_strategies.py  test_utils.py  test_viz_balance.py  test_viz_plate.py  test_viz_timeline.py  test_writers.py  (+1 more)
vignettes/: config.qmd
(+241 files in other folders)
