[project]
name = "qg-dump"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "bfabric>=1.16.1",
    "cyclopts>=4.4.4",
    "ipython>=9.9.0",
    "loguru>=0.7.0",
    "marimo>=0.18.4",
    "pandas>=2.3.3",
    "polars",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tomli-w>=1.0.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]

[tool.uv.sources]
bfabric = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qg"]

[project.scripts]
qg = "qg.cli.generate_queues:cli_main"
qg-validate = "qg.cli.validate_config:cli_main"
qg-find-projects = "qg.cli.find_projects:main"
qg-params = "qg.cli.generate_params:cli_main"
qg-tools = "qg.tools.cli:main"
qg-csv-to-params = "qg.tools.csv_to_paramsjson:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"src/qg/apps/*" = ["B018", "E501"]
"src/qg/tools_apps/*" = ["B018", "E501"]

[tool.ruff.format]
quote-style = "double"
