[project]
name = "qg"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "bfabric>=1.16.1",
    "bfabric-asgi-auth",
    "bfabric-rest-proxy",
    "cyclopts>=4.4.4",
    "fastapi>=0.128.0",
    "ipython>=9.9.0",
    "loguru>=0.7.0",
    "marimo>=0.18.4",
    "pandas>=2.3.3",
    "polars",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "starlette>=0.50.0",
    "python-gitlab>=5.0.0",
    "tomli-w>=1.0.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]

[tool.uv.sources]
bfabric = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric", rev = "main" }
bfabric-asgi-auth = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric_asgi_auth", rev = "main" }
bfabric-rest-proxy = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric_rest_proxy", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.390",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qg"]

[project.scripts]
qg = "qg.cli.generate_queues:cli_main"
qg-validate = "qg.cli.validate_config:cli_main"
qg-find-projects = "qg.cli.find_projects:main"
qg-tools = "qg.tools.cli:main"
qg-app = "qg.gitlab.launcher:launch_queue_app"
qg-editor = "qg.gitlab.launcher:launch_config_editor"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py313"  # py314 not yet supported by ruff

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"src/qg/apps/*" = ["B018", "E501"]
"src/qg/tools_apps/*" = ["B018", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
include = ["src/qg"]
exclude = [
    "src/qg/apps",         # marimo apps have looser typing
    "src/qg/tools_apps",   # marimo apps have looser typing
    "src/qg/tools",        # conversion tools have complex types
    "src/qg/bfabric_utils.py",  # external API types
]
typeCheckingMode = "off"  # disable most checks, enable specific ones below
reportUndefinedVariable = "error"
reportMissingImports = "error"
reportMissingModuleSource = "error"
