[project]
name = "qg"
version = "0.7.0"
description = "Queue generation system for mass spectrometry instruments. Generates sample queues with QC injections for XCalibur, Chronos, and Hystar, with B-Fabric LIMS integration for sample loading and workunit upload."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.0.0",
    "cyclopts>=4.4.4",
    "fastexcel>=0.11",
    "ipython>=9.9.0",
    "loguru>=0.7.0",
    "marimo>=0.23.7",
    "pandas>=2.3.3",
    "polars",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "rich>=14.2.0",
    "tomli-w>=1.0.0",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
# FGCZ B-Fabric portal extra: auth, LIMS sample loading, workunit upload, and the
# GitLab-deployed launcher. The core install (and the local upload app) need none of it.
bfabric = [
    "bfabric>=1.16.1",
    "bfabric-asgi-auth",
    "bfabric-rest-proxy",
    "fastapi>=0.128.0",
    "starlette>=0.50.0",
    "python-gitlab>=5.0.0",
]

[tool.uv]
# Install the portal extra in the dev/CI environment by default (so the full suite
# — GUI + B-Fabric tests — runs); a plain `pip install qg` stays B-Fabric-free.
default-groups = ["dev", "portal"]

[tool.uv.sources]
bfabric = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric", rev = "main" }
bfabric-asgi-auth = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric_asgi_auth", rev = "main" }
bfabric-rest-proxy = { git = "https://github.com/fgcz/bfabricPy", subdirectory = "bfabric_rest_proxy", rev = "main" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pyright>=1.1.390",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-bdd>=7.3",
    "pytest-playwright>=0.5",
    "playwright>=1.45",
    "ruff>=0.9.0",
    "xlsxwriter>=3.2",
]
docs = [
    "mkdocs-material>=9.5",
]
# Pulls the public `bfabric` extra into the dev/CI venv (see [tool.uv] default-groups).
portal = [
    "qg[bfabric]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qg"]

[project.scripts]
qg = "qg.cli.generate_queues:cli_main"
qg-validate = "qg.cli.validate_config:cli_main"
qg-find-projects = "qg.cli.find_projects:main"
qg-refresh-cache = "qg.cli.refresh_cache:app"
qg-app = "qg.gitlab.launcher:launch_queue_app"
qg-app-local = "qg.apps.launcher_local:launch_local_app"
qg-editor = "qg.gitlab.launcher:launch_config_editor"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not bfabric_test_instance'"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "bfabric_test_instance: GUI scenario executed against the real fgcz-bfabric-test.uzh.ch instance (requires QG_BFABRIC_TEST_PAT). Excluded from default runs.",
    "bfabric: requires the qg[bfabric] extra (B-Fabric packages). Skipped/deselected on a core-only install via '-m \"not bfabric\"'.",
]

[tool.ruff]
line-length = 120
target-version = "py313"  # py314 not yet supported by ruff

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "W",      # pycodestyle warnings
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"src/qg/apps/*" = ["B018", "E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
include = ["src/qg"]
exclude = [
    "src/qg/apps",         # marimo apps have looser typing
    "src/qg/bfabric_utils.py",  # external API types
]
typeCheckingMode = "off"  # disable most checks, enable specific ones below
reportUndefinedVariable = "error"
reportMissingImports = "error"
reportMissingModuleSource = "error"
