[project]
name = "config-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inline-snapshot>=0.29.2",
    "nox>=2025.5.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "rpy2>=3.6.4",
]
